[package]
name = "substrate-subxt"
version = "0.6.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
log = "0.4"
thiserror = "1.0"
futures = "0.3"
jsonrpsee = { version = "0.1", features = ["ws"] }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"
codec = { package = "parity-scale-codec", version = "1.2", default-features = false, features = ["derive", "full"] }

frame-metadata = { version = "11.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
frame-support = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-version = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-indices = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
hex = "0.4.0"
sp-rpc = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-core = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

[dev-dependencies]
async-std = "1.5.0"
env_logger = "0.7"
wabt = "0.9"
frame-system = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-balances = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-keyring = { version = "2.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
